# You can remove this line and `forced-target` property and use `.cargo/config.toml` if your crate isn't in workspace.
cargo-features = ["per-package-target"]

[[bin]]
name = "corne"
path = "src/main.rs"
test = false
doctest = false
bench = false

[package]
name = "example-corne"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
forced-target = "thumbv6m-none-eabi"

# Config used by rktk-cli. For details, see [rktk-cli](https://crates.io/crates/rktk-cli).
[package.metadata.rktk-cli]
mcu = "Rp2040"

[dependencies]
rktk = { workspace = true }
rktk-drivers-rp = { workspace = true }
rktk-drivers-common = { workspace = true }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-rp = { workspace = true, features = [
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
embassy-executor = { workspace = true, features = [
  "task-arena-size-65536",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
] }

portable-atomic = { version = "1.6.0", features = [
  "unsafe-assume-single-core",
] }

[features]
default = ["right"]

right = []
left = []

_check = []
# Remove this line in your project. It's just used in this workspace for check.
