[package]
name = "dummy-kb"
version = "0.1.0"
edition = "2021"

[dependencies]
rktk-drivers-rp2040 = { path = "../../lib/rktk-drivers-rp2040" }
rktk = { path = "../../lib/rktk" }
cortex-m = { workspace = true, features = ["inline-asm"] }
cortex-m-rt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-rp = { workspace = true, features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-executor = { workspace = true, features = [
  "task-arena-size-65536",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
portable-atomic = { version = "1.6.0", features = [
  "unsafe-assume-single-core",
] }
