cargo-features = ["per-package-target"]

[package]
name = "dummy-kb"
version = "0.1.0"
edition = "2021"
forced-target = "thumbv6m-none-eabi"

[dependencies]
rktk-drivers-rp2040 = { workspace = true }
rktk = { workspace = true }
cortex-m = { workspace = true, features = ["inline-asm"] }
cortex-m-rt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-rp = { workspace = true, features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-executor = { workspace = true, features = [
  "task-arena-size-65536",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
portable-atomic = { version = "1.6.0", features = [
  "unsafe-assume-single-core",
] }

# to import example keymap
keyball-common = { path = "../keyball-common" }
