[package]
name = "keyball61-nrf52840"
version = "0.1.0"
edition = "2021"

[dependencies]
rktk-drivers-nrf52 = { path = "../../lib/rktk-drivers-nrf52" }
rktk = { path = "../../lib/rktk" }

embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
  "defmt",
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice", features = [
  "defmt",
  "ble-peripheral",
  "ble-central",
  "critical-section-impl",
  "s140",
  "nrf52840",
] }

once_cell = { version = "1.19.0", default-features = false, features = [
  "atomic-polyfill",
] }
embedded-graphics = "0.8.1"
ssd1306 = { git = "https://github.com/bugadani/ssd1306", branch = "ehal1" }
display-interface = "0.5.0"
