cargo-features = ["per-package-target"]

[package]
name = "keyball61-nrf52840"
version = "0.1.0"
edition = "2021"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
rktk-drivers-nrf52 = { path = "../../lib/rktk-drivers-nrf52" }
rktk = { path = "../../lib/rktk" }

embassy-executor = { workspace = true, features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "integrated-timers",
  "nightly",
] }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-nrf = { workspace = true, features = [
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }

cortex-m = { workspace = true, features = ["inline-asm"] }
cortex-m-rt = { workspace = true }

defmt-rtt = "0.4.0"
nrf-softdevice = { workspace = true, features = [
  "ble-peripheral",
  "ble-central",
  "critical-section-impl",
  "s140",
  "nrf52840",
] }

once_cell = { version = "1.19.0", default-features = false, features = [
  "atomic-polyfill",
] }
embedded-graphics = "0.8.1"
ssd1306 = { git = "https://github.com/bugadani/ssd1306", branch = "ehal1" }
display-interface = "0.5.0"
heapless = "0.8.0"

[features]
usb = []
# Enables ble driver. If this feature is enabled, this side is always master.
ble-master = []
default = ["ble-master", "usb"]
