cargo-features = ["per-package-target"]

[package]
name = "keyball61-nrf52840"
version = "0.1.0"
edition = "2021"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
rktk-drivers-nrf = { workspace = true }
rktk = { workspace = true }

embassy-executor = { workspace = true, features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "integrated-timers",
  "task-arena-size-65536",
  # "nightly",
] }
embassy-time = { workspace = true }
embassy-nrf = { workspace = true, features = [
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }
embassy-sync = { workspace = true }
nrf-softdevice = { workspace = true, features = [
  "ble-peripheral",
  "ble-central",
  "critical-section-impl",
  "s140",
  "nrf52840",
] }

cortex-m = { workspace = true, features = ["inline-asm"] }
cortex-m-rt = { workspace = true }

once_cell = { version = "1.19.0", default-features = false, features = [
  "atomic-polyfill",
] }
ssd1306 = { workspace = true }

keyball-common = { path = "../keyball-common" }

[features]
usb = []
# Enables ble driver. If this feature is enabled, this side is always master.
ble = ["rktk-drivers-nrf/ble"]
default = ["ble", "usb"]
_check = []
