[package]
name = "rktk-drivers-common"
description = "Common drivers for rktk"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rktk = { workspace = true }

rktk-log = { workspace = true }
log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }

critical-section = { workspace = true, optional = true }
embassy-executor = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true, features = [
  "max-handler-count-8",
  "max-interface-count-8",
] }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embedded-storage-async = { workspace = true }
sequential-storage = { workspace = true }

usbd-hid = { workspace = true }

ssd1306 = { workspace = true }
display-interface = { workspace = true }
embedded-graphics = { workspace = true }

heapless = { workspace = true }
thiserror = { workspace = true }

[features]
_check = ["defmtusb", "log", "defmt", "defmt-timestamp", "usb-remote-wakeup"]

defmtusb = ["defmt", "dep:critical-section"]
defmt-timestamp = ["defmt"]
defmt = ["dep:defmt", "embassy-usb/defmt"]
log = ["dep:log"]

## Enables remote wakeup feature of USB.
## NOTE: Usually, this is automatically enabled by each platform's driver crate and you should not enable this feature manually.
usb-remote-wakeup = []
