cargo-features = ["per-package-target"]

[package]
name = "rktk-drivers-nrf"
description = "rktk drivers for nrf chip"
forced-target = "thumbv7em-none-eabihf"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["embassy-nrf/nrf52840"]
default-target = "thumbv7em-none-eabihf"

[dependencies]
rktk = { workspace = true }
rktk-drivers-common = { workspace = true }

embassy-embedded-hal = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-nrf = { workspace = true, features = ["gpiote", "time-driver-rtc1"] }
nrf-softdevice = { optional = true, workspace = true, features = [
  "ble-peripheral",
] }
embedded-io-async = { workspace = true }

embedded-storage-async = { workspace = true }
sequential-storage = { workspace = true }

ssd1306 = { workspace = true }
display-interface = { workspace = true }

serde = { workspace = true }
postcard = { workspace = true }

static_cell = { workspace = true }
heapless = { workspace = true }
bitvec = { version = "1.0.1", default-features = false }
ssmarshal = { workspace = true }
smart-leds = { workspace = true }
usbd-hid = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["nrf52840", "softdevice-s140", "ble"]

softdevice = ["dep:nrf-softdevice"]

ble = ["softdevice", "nrf-softdevice/ble-gatt-server", "nrf-softdevice/ble-sec"]
nrf52840 = ["embassy-nrf/nrf52840", "nrf-softdevice/s140"]
softdevice-s140 = ["nrf-softdevice/nrf52840"]

nightly = ["embassy-executor/nightly"]

_check = ["embassy-nrf/nrf52840"]
