cargo-features = ["per-package-target"]

[package]
name = "rktk-drivers-nrf"
description = "rktk drivers for nrf chip"
forced-target = "thumbv7em-none-eabihf"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["embassy-nrf/nrf52840"]
default-target = "thumbv7em-none-eabihf"

[dependencies]
rktk = { workspace = true }
rktk-drivers-common = { workspace = true }

rktk-log = { workspace = true }
log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }

cortex-m = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-nrf = { workspace = true, features = ["gpiote", "time-driver-rtc1"] }
nrf-softdevice = { optional = true, workspace = true, features = [
  "ble-peripheral",
  "ble-central",
  "ble-l2cap",
] }
embedded-io-async = { workspace = true }

embedded-storage-async = { workspace = true }
sequential-storage = { workspace = true }

ssd1306 = { workspace = true }
display-interface = { workspace = true }

serde = { workspace = true }
postcard = { workspace = true }

static_cell = { workspace = true }
heapless = { workspace = true }
bitvec = { version = "1.0.1", default-features = false }
ssmarshal = { workspace = true }
smart-leds = { workspace = true }
usbd-hid = { workspace = true }
thiserror = { workspace = true }
atomic-pool = "2.0.0"

embassy-nrf-esb = { path = "../../../../../lib/embassy-nrf-esb/" }

[features]
_check = [
  "embassy-nrf/nrf52840",
  "nrf-softdevice/nrf52840",
  "nrf-softdevice/s140",
]

default = ["ble", "power"]

softdevice = ["dep:nrf-softdevice"]
# Enables system power off feature. This is supported only on some chips like nRF52840.
power = []
ble = ["softdevice", "nrf-softdevice/ble-gatt-server", "nrf-softdevice/ble-sec"]
nightly = ["embassy-executor/nightly"]

defmt = [
  "dep:defmt",
  "nrf-softdevice?/defmt",
  "embassy-nrf/defmt",
  "heapless/defmt-impl",
  "postcard/use-defmt",
  "embassy-nrf-esb/defmt",
]
log = ["dep:log"]
