cargo-features = ["per-package-target"]

[package]
name = "rktk-drivers-nrf"
description = "rktk drivers for nrf chip"
forced-target = "thumbv7em-none-eabihf"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
test = false
doctest = false
bench = false

[package.metadata.docs.rs]
no-default-features = true
features = ["embassy-nrf/nrf52840"]
default-target = "thumbv7em-none-eabihf"

[dependencies]
rktk = { workspace = true }
rktk-drivers-common = { workspace = true, features = ["usb-remote-wakeup"] }

rktk-log = { workspace = true }
log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }

embassy-embedded-hal = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-nrf = { workspace = true, features = [
  "gpiote",
  "time-driver-rtc1",
  "unstable-pac",
] }
nrf-softdevice = { optional = true, workspace = true, features = [
  "ble-peripheral",
  "ble-central",
  "ble-l2cap",
] }
embedded-io-async = { workspace = true }
cortex-m = { workspace = true }

embedded-storage-async = { workspace = true }
sequential-storage = { workspace = true }

serde = { workspace = true }
postcard = { workspace = true }

static_cell = { workspace = true }
heapless = { workspace = true }
bitvec = { version = "1.0.1", default-features = false }
ssmarshal = { workspace = true }
smart-leds = { workspace = true }
usbd-hid = { workspace = true }
thiserror = { workspace = true }
atomic-pool = "2.0.0"

esb-ng = { git = "https://github.com/jamesmunns/esb", version = "0.1.0", optional = true }

document-features = { workspace = true }

[features]
default = ["power"]

_check = [
  "embassy-nrf/nrf52840",
  "nrf-softdevice/nrf52840",
  "nrf-softdevice/s140",
  "esb",
  "softdevice-ble",
]

## Use this feature to use embassy-executor's nightly features.
nightly = ["embassy-executor/nightly"]

## Enables system power off feature. This is supported only on some chips like nRF52840.
power = []

## Enables wireless dongle driver using esb(Enhanced Shockburst) protocol.
## This feature is not compatible with softdevice.
esb = ["dep:esb-ng"]

#! #### Softdevice
## Enables softdevice. If this feature is enabled, the softdevice will be included in the build.
softdevice = ["dep:nrf-softdevice"]

## Enables BLE split and reporter driver using softdevice
softdevice-ble = [
  "softdevice",
  "nrf-softdevice/ble-gatt-server",
  "nrf-softdevice/ble-sec",
  "nrf-softdevice/ble-central",
  "nrf-softdevice/ble-peripheral",
]

#! #### Logging
## Enables defmt logging
defmt = [
  "dep:defmt",
  "rktk/defmt",
  "rktk-log/defmt",
  "nrf-softdevice?/defmt",
  "embassy-nrf/defmt",
  "heapless/defmt-impl",
  "postcard/use-defmt",
]
## Enables log logging
log = ["dep:log"]
