cargo-features = ["per-package-target"]

[package]
name = "rktk-drivers-nrf52"
description = "rktk drivers for nrf52"
forced-target = "thumbv7em-none-eabihf"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rktk = { path = "../rktk" }
rktk-drivers-common = { path = "../rktk-drivers-common" }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
  "defmt",
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }
embedded-io-async = { workspace = true }

ssd1306 = { workspace = true }
display-interface = { workspace = true }

static_cell = { workspace = true }
heapless = { workspace = true }

[features]
