cargo-features = ["per-package-target"]

[package]
name = "rktk-drivers-nrf52"
description = "rktk drivers for nrf52"
forced-target = "thumbv7em-none-eabihf"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rktk = { path = "../rktk" }
rktk-drivers-common = { path = "../rktk-drivers-common" }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-nrf = { workspace = true, features = [
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }
nrf-softdevice = { workspace = true, features = [
  "ble-peripheral",
  "ble-gatt-server",
  "ble-sec",
  "s140",
  # TODO: make this rust-analyzer only
  "nrf52840",
] }
embedded-io-async = { workspace = true }
embedded-storage-async = { workspace = true }

ssd1306 = { workspace = true }
display-interface = { workspace = true }

static_cell = { workspace = true }
heapless = { workspace = true }
bitvec = { version = "1.0.1", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
smart-leds = { workspace = true }
defmt = { workspace = true }
usbd-hid = { workspace = true }

[features]
