[package]
name = "rktk-drivers-rp"
description = "rktk drivers for RP chip"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rktk = { workspace = true }
rktk-drivers-common = { workspace = true }

embedded-storage-async = { workspace = true }

embassy-embedded-hal = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true, features = [
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }

ssd1306 = { workspace = true }
display-interface = { workspace = true }

smart-leds = { workspace = true }

pio-proc = "0.2.2"
pio = "0.2.1"

fixed = { workspace = true }
fixed-macro = { workspace = true }
static_cell = { workspace = true }
thiserror = { workspace = true }

[features]
_check = []
