[package]
name = "rktk-drivers-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
rktk = { path = "../rktk" }
rktk-drivers-common = { path = "../rktk-drivers-common" }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
static_cell = "2.1.0"
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
ssd1306 = { workspace = true }
display-interface = { workspace = true }
fixed = { workspace = true }
fixed-macro = { workspace = true }
smart-leds = { workspace = true }
pio-proc = "0.2.2"
pio = "0.2.1"
