[package]
name = "rktk-drivers-rp2040"
description = "rktk drivers for RP2040"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rktk = { workspace = true }
rktk-drivers-common = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
static_cell = { workspace = true }
embassy-rp = { workspace = true, features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
ssd1306 = { workspace = true }
display-interface = { workspace = true }
fixed = { workspace = true }
fixed-macro = { workspace = true }
smart-leds = { workspace = true }
pio-proc = "0.2.2"
pio = "0.2.1"
rand_core = { workspace = true }
embedded-storage-async = { workspace = true }
