[package]
name = "rktk-keymanager"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bitflags = { version = "2.6.0" }
heapless = { workspace = true }
usbd-hid = { workspace = true, optional = true }

paste = { workspace = true }
macro_rules_attribute = { workspace = true }

serde = { workspace = true, optional = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"], optional = true }
postcard = { workspace = true, optional = true, features = [
  "experimental-derive",
] }

specta = { workspace = true, optional = true, features = ["derive"] }

tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
critical-section = { version = "1.1.2", features = ["std"] }
pretty_assertions = "1.4.0"
usbd-hid = { workspace = true }


[features]
# Enables state management.
state = ["dep:usbd-hid"]
# Enables serialization.
serde = ["dep:serde", "dep:serde_with"]
# Enables serialization with postcard.
postcard = ["dep:postcard", "serde"]

std = []
# Enables type export by specta.
specta = ["std", "dep:specta", "postcard"]
tsify = ["std", "dep:tsify-next", "dep:wasm-bindgen", "postcard"]
