[package]
name = "rktk-keymanager"
description = "Keymap/state manager for self-made keyboard firmware"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
features = ["state", "postcard"]

[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
heapless = { workspace = true }
usbd-hid = { workspace = true, optional = true }

paste = { workspace = true }
macro_rules_attribute = { workspace = true }

strum = { version = "0.26.3", default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"], optional = true }
postcard = { workspace = true, optional = true, features = [
  "experimental-derive",
] }

wasm-bindgen = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
ssmarshal = { workspace = true, optional = true }

[dev-dependencies]
critical-section = { version = "1.1.2", features = ["std"] }
pretty_assertions = "1.4.0"
usbd-hid = { workspace = true }

[features]
# Enables state management.
state = ["dep:usbd-hid"]
# Enables serialization.
serde = ["dep:serde", "dep:serde_with"]
# Enables serialization with postcard.
postcard = ["dep:postcard", "serde"]
schemars = ["dep:schemars", "serde", "std"]

std = []

_check = ["state", "schemars", "ssmarshal/std"]
