[package]
name = "rktk-log-macros"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.98", features = ["visit-mut", "full"] }
proc-macro2 = "1.0.93"

[lib]
proc-macro = true

[features]
_check = []
_defmt = []
_log = []
