[package]
name = "rktk-log"
description = "rktk log management"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }

[features]
_check = ["defmt", "log"]
defmt = ["dep:defmt"]
log = []
